NVSK: Contact page text alignment issue resolved

--- a/src/app/views/contact-page/contact-page.component.scss
+++ b/src/app/views/contact-page/contact-page.component.scss
@@ -21,14 +21,18 @@ p {
     margin-right: 5px;
 	
 }
-.cont-detail .cont-icon.icon{
-	width: 40px;
-	height: 24px;
+
+img, video {
+    max-width: unset;
+    height: auto;
 }
+
 .cont-detail span {
     font-size: 15px;
     line-height: 26px;
 }
+
+
 
 @media (min-width: 992px){
 	.contact-sec .container {
